feat: Implement MSDS PDF text extraction and Excel sheet generation
- Add PDF processing functionality using pdfplumber
- Implement MSDS data parsing from extracted text
- Create Excel workbooks with structured MSDS information
- Add pdfplumber, openpyxl, pandas dependencies
- Integrate PDF processing into main workflow
- Generate processing summary as JSON
- Save extracted text as backup files

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,9 @@ classifiers = [
 dependencies = [
     "python-dotenv>=1.0.0",
     "click>=8.1.0",
+    "pdfplumber>=0.10.0",
+    "openpyxl>=3.10.0",
+    "pandas>=2.0.0",
 ]
 
 [project.optional-dependencies]
