--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 # Core dependencies
 python-dotenv>=1.0.0
 click>=8.1.0
+pdfplumber>=0.10.0
+openpyxl>=3.10.0
+pandas>=2.0.0
 
 # Development dependencies
 pytest>=7.0.0
